Fixed bug where frames go under toolbar on mobile view

--- a/app/styles/ui.less
+++ b/app/styles/ui.less
@@ -7,7 +7,7 @@
 
 #toolbar {
   background-color: #505050;
-  padding: @navbar-height @sidebar-width 0 @sidebar-width;
+  margin: @navbar-height @sidebar-width 0 @sidebar-width;
   height: 30px;
 
   .pages {
